Align items & Fix container issue

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
   font-size: 2rem;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
+  height: 100vh;
 }
 
 .container {
@@ -23,6 +24,15 @@ body {
   flex-wrap: wrap;
 }
 
+.main-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 7rem;
+}
+
 .grids {
   flex-shrink: 0;
   box-sizing: border-box;
@@ -32,4 +42,20 @@ body {
   width: 15rem;
   height: 5rem;
   font-size: 2rem;
+}
+
+.wrapper {
+  padding: 2rem;
+  display: flex;
+  column-gap: 10rem;
+  transform: translate(-20%, 0);
+}
+
+.settings {
+  padding: 4rem 4rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+  align-items: center;
+  justify-content: space-between;
 }
